# memvault

./: .gitignore  LICENSE  Phase3-性能报告.md  README.md  README_EN.md  compression_backup.json  pyproject.toml
examples/: 01_basic.py
memvault/: __init__.py  cli.py  config.py  types.py
memvault/core/: __init__.py  compressor.py  consolidator.py  decay.py  engine.py  formatter.py
memvault/embedding/: __init__.py  base.py  mock.py  ollama.py
memvault/llm/: __init__.py  client.py  mock.py
memvault/retrieval/: __init__.py  base.py  colbert.py  dense.py  fusion.py  hybrid.py  sparse.py
memvault/storage/: __init__.py  base.py  file.py  memory.py  sqlite.py
memvault_index/: .last_build_mtime  default__vector_store.json  docstore.json  index_store.json
tests/: __init__.py  test_benchmark.py  test_compression.py  test_consolidation.py  test_decay.py  test_engine.py  test_integration.py  test_retrieval.py  test_sleep_loop_longevity.py  test_sleep_loop_quality.py  test_storage.py  test_stress.py
