[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memvault"
version = "0.1.0"
description = "A cognitive-science-grounded memory system for AI applications — with forgetting curves, sleep consolidation, and hybrid retrieval."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "memvault contributors"},
]
keywords = [
    "memory", "ai", "llm", "cognitive-science", "ebbinghaus",
    "rag", "retrieval", "forgetting-curve", "knowledge-graph",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
rag = [
    "llama-index-core>=0.10.0",
    "llama-index-embeddings-ollama>=0.1.0",
]
llm = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]
all = [
    "memvault[rag,llm,dev]",
]

[project.urls]
Homepage = "https://github.com/memvault/memvault"
Repository = "https://github.com/memvault/memvault.git"
Documentation = "https://github.com/memvault/memvault/tree/main/docs"

[project.scripts]
memvault = "memvault.cli:main"

[tool.setuptools.packages.find]
include = ["memvault*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-k \"not slow\"')",
    "benchmark: marks tests as benchmarks",
    "quality: marks tests that require real LLM + Embedder services (deselect with '-k \"not quality\"')",
]

[tool.coverage.run]
source = ["memvault"]
omit = ["tests/*", "memvault/llm/mock.py", "memvault/embedding/mock.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
